# icp-hackathon-24-2

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  setupEnv.js
.dfx/local/: canister_ids.json
.dfx/local/canisters/geohash/: constructor.did  geohash.wasm  index.js  service.did.d.ts  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
basic_bitcoin/: Cargo.toml  basic_bitcoin.did  build.sh  dfx.json
basic_bitcoin/src/: lib.rs
basic_ethereum/: Cargo.toml  basic_ethereum.did
basic_ethereum/src/: ethereum_wallet.rs  lib.rs  state.rs
dip721_nft_container/: Cargo.toml  dip721-nft-container.did
dip721_nft_container/src/: http.rs  lib.rs
frontend/: dfx.json  package-lock.json  package.json
frontend/src/: App.js  GeolocationMap.js  index.js  output.css
frontend/src/declarations/: declarations
frontend/src/declarations/geohash/: geohash.did  geohash.did.d.ts  geohash.did.js  index.d.ts  index.js
geohash/: .gitignore  Cargo.toml  build.rs  dfx.json  geohash.did
geohash/.dfx/local/: canister_ids.json
geohash/.dfx/local/canisters/geohash/: service.did.js
geohash/src/: area_generator.rs  bitcoin.rs  ethereum.rs  grid_generator.rs  grid_match.rs  lib.rs  nft.rs  nft_lookup.rs  nft_mint.rs  tests.rs  types.rs
geohash/src/geohash/: geohash.did
geohash/test/: integration_test.rs
nft-wallet/: Cargo.toml
src/declarations/geohash/: geohash.did  geohash.did.d.ts  geohash.did.js  index.d.ts
target 2/: .rustc_info.json
target 2/release/.fingerprint/aho-corasick-fa59a8f3784f293b/: lib-aho_corasick  lib-aho_corasick.json
target 2/release/.fingerprint/alloy-rlp-derive-6c74ad2b5105b748/: lib-alloy_rlp_derive  lib-alloy_rlp_derive.json
target 2/release/.fingerprint/anyhow-07d92ba93ff0f19b/: lib-anyhow  lib-anyhow.json
target 2/release/.fingerprint/anyhow-837827935995c530/: run-build-script-build-script-build  run-build-script-build-script-build.json
target 2/release/.fingerprint/anyhow-8ad82e58137919ef/: build-script-build-script-build  build-script-build-script-build.json
target 2/release/.fingerprint/arrayvec-4a0b063afc0af8b4/: lib-arrayvec  lib-arrayvec.json
target 2/release/.fingerprint/ascii-canvas-954c052b24fefc58/: lib-ascii_canvas  lib-ascii_canvas.json
target 2/release/.fingerprint/autocfg-e983635fc2211fce/: lib-autocfg  lib-autocfg.json
target 2/release/.fingerprint/beef-7ef80cdfbce93864/: lib-beef  lib-beef.json
target 2/release/.fingerprint/binread-27005d64310e9547/: lib-binread  lib-binread.json
target 2/release/.fingerprint/binread-e9a86cac56d4a198/: lib-binread  lib-binread.json
target 2/release/.fingerprint/binread_derive-35c2fc17787b71bf/: lib-binread_derive  lib-binread_derive.json
target 2/release/.fingerprint/binread_derive-b8df196605a38698/: lib-binread_derive  lib-binread_derive.json
target 2/release/.fingerprint/bit-set-e05f55ab1559c861/: lib-bit_set  lib-bit_set.json
target 2/release/.fingerprint/bit-vec-f3c784fc80dae244/: lib-bit_vec  lib-bit_vec.json
target 2/release/.fingerprint/block-buffer-34932082c5bc4cf9/: lib-block_buffer  lib-block_buffer.json
target 2/release/.fingerprint/bumpalo-0c2d89e5d3e609b9/: lib-bumpalo  lib-bumpalo.json
target 2/release/.fingerprint/byteorder-a6806585affe4b8b/: lib-byteorder  lib-byteorder.json
target 2/release/.fingerprint/candid-36ec6374d1cd4898/: lib-candid  lib-candid.json
target 2/wasm32-unknown-unknown/release/: basic_bitcoin.d  basic_bitcoin.wasm  basic_ethereum.d
(+1012 files in other folders)
