[package]
name = "geohash_canister"
version = "0.1.0"
edition = "2018"

[dependencies]
# Dependencies for Internet Computer SDK
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"

# Dependencies for serialization and deserialization
serde = "1.0"
serde_json = "1.0"

# External geohash crate for geohashing functionalities
geohash = "0.13.1"

# Candid dependency for Candid interface definitions
candid = "0.7.9"

[lib]
crate-type = ["cdylib"]