[package]
name = "geohash_canister"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for Internet Computer SDK
ic-cdk = "0.15.0"
#ic-cdk = "0.5.7"
ic-cdk-macros = "0.15.0"
#ic-cdk-macros = "0.5.7"
rand = "0.8"
getrandom = { version = "0.2.3", features = ["js"] }
dotenvy = "0.15.6"

# Dependencies for serialization and deserialization
serde = "1.0"
serde_json = "1.0"

# External geohash crate for geohashing functionalities
geohash = "0.13.1"

# Candid dependency for Candid interface definitions
candid = "0.10.6"
#candid = "0.7.9"


[patch.crates-io]
candid = { version = "0.10.6", package = "candid" }
candid_derive = { version = "0.6.6", package = "candid_derive" }

[lib]
crate-type = ["cdylib"]